samples/_failures_safe/1761268739_274cd0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_746eb5e6.c: In function ‘matrix_transpose’:
./samples/SAFE/__tmp_746eb5e6.c:129: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_746eb5e6.c:128:5: error: expected declaration or statement at end of input
  128 |     if
      |     ^~
